--- a/HappyTrip_old/pom.xml
+++ b/HappyTrip_old/pom.xml
@@ -22,6 +22,13 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <version>3.0.0-M4</version>
+  <type>maven-plugin</type>
+</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.seleniumhq.webdriver/webdriver-chrome -->
 		<dependency>
